Fixed a bug where text would go off screen on mobile, if it was too long

--- a/css/main.css
+++ b/css/main.css
@@ -210,7 +210,7 @@ body {
 
 h1 {
     font-family: Rubik, sans-serif;
-
+    word-break: break-word;
 }
 
 h2 {
